--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -88,3 +88,32 @@ nav > div {
 .gnb a {
   margin: 20px;
 }
+
+.todo{
+  margin-left: 20px;
+}
+
+.btn {
+  margin-left :80%;
+ 
+  padding : 10px;
+  color : white;
+	background : black;
+	border-radius: 10px;
+	font-size:10;
+}
+
+.input{
+  margin-top : 10px;
+  padding : 5px;
+  margin-left: 10px;
+}
+
+.btn-input{
+  margin-left: 7px;
+  padding : 5px;
+  color : white;
+	background : black;
+	border-radius: 10px;
+	font-size:10;
+}
