--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -105,8 +105,9 @@ nav > div {
 
 .input{
   margin-top : 10px;
-  padding : 5px;
+  padding : 6px;
   margin-left: 10px;
+  border-radius: 10px;
 }
 
 .btn-input{
