--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -64,7 +64,7 @@ header {
 }
 
 nav {
-  width: 1100px;
+  width: 100%;
   margin: auto;
 }
 
@@ -78,6 +78,7 @@ nav > div {
   float: left;
   width: 180px;
   line-height: 70px;
+  margin-left: 20px;
   text-align: center;
 }
 .gnb {
@@ -86,7 +87,7 @@ nav > div {
 }
 
 .gnb a {
-  margin: 20px;
+  margin: 30px;
 }
 
 .todo{
@@ -117,4 +118,8 @@ nav > div {
 	background : black;
 	border-radius: 10px;
 	font-size:10;
+}
+
+.input-todo{
+ margin-left: 36%;
 }
