--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,4 +1,8 @@
 .App {
+  font-family: sans-serif;
+  text-align: center;
+}
+.App {
   text-align: center;
 }
 
@@ -35,4 +39,92 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.container {
+  margin: 0;
+  color: #eee;
+  line-height: 1.5em;
+  font-size: 30px;
+  background-color: #222;
+  font-weight: 300;
+  box-sizing: border-box;
+}
+
+.container a {
+  text-decoration: none;
+  color: #eee;
+  font-size: 20px;
+}
+
+header {
+  font-weight: normal;
+  background: #222;
+  box-shadow: 5px 0 15px rgba(0, 0, 0, 0.15);
+}
+
+nav {
+  width: 100%;
+  margin: auto;
+}
+
+nav > div {
+  /*border:1px solid #000;*/
+  height: 70px;
+  line-height: 70px;
+}
+
+.icon {
+  float: left;
+  width: 180px;
+  line-height: 70px;
+  margin-left: 20px;
+  text-align: center;
+}
+.gnb {
+  margin: auto;
+  text-align: center;
+}
+
+.gnb a {
+  margin: 30px;
+}
+
+.todo{
+  margin: top 10px;
+  margin-left: 80px;
+}
+
+.todo-body{
+  margin-left: 100px;
+}
+
+.btn {
+  margin-left :78%;
+ 
+  padding : 10px;
+  color : white;
+	background : black;
+	border-radius: 10px;
+	font-size:10;
+}
+
+.input{
+  margin-top : 10px;
+  padding : 6px;
+  margin-left: 10px;
+  border-radius: 10px;
+}
+
+.btn-input{
+  margin-left: 7px;
+  padding : 5px;
+  color : white;
+	background : black;
+	border-radius: 10px;
+	font-size:10;
+}
+
+.input-todo{
+ margin-left: 36%;
 }
